--- a/Server/.env
+++ b/Server/.env
@@ -18,6 +18,8 @@ JWT_KEY_SECRET_ACCOUT="HDJCJFDFDBFNDBCHBDCHBCHDBCHDCBHDBCHDBCHD"
 
 
 # Infomation Gmail
+ ADMIN_NAME = "Administrator"
  HOST_MAIL = "gmail"
- ADMIN_MAIL = 'tranngoctinh96@gmail.com'
+ ADMIN_MAIL = 'iiot.ad.2020@gmail.com'
  ADMIN_PASSWORD ="tnt1513516hcmut"
+ 
