--- a/Client/package.json
+++ b/Client/package.json
@@ -11,7 +11,7 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
-    "apexcharts": "^3.19.3",
+    "apexcharts": "^3.22.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "feather-icons-react": "^0.4.1",
@@ -24,6 +24,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
+    "react-fontawesome": "^1.7.1",
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^4.10.1",
     "react-redux": "^7.2.0",
