--- a/Server/.env
+++ b/Server/.env
@@ -20,13 +20,13 @@ JWT_KEY_SECRET_ACCOUT="HDJCJFDFDBFNDBCHBDCHBCHDBCHDCBHDBCHDBCHD"
 # Infomation Gmail
  ADMIN_NAME = "Administrator"
  HOST_MAIL = "gmail"
- ADMIN_MAIL = "iiot.ad.2020@gmail.com"
+ ADMIN_MAIL = "tranngoctinh96@gmail.com"
  ADMIN_PASSWORD ="tnt1513516hcmut"
  
 
  # Infomation CLOUT MQTT (MQTT BROKER)
- MQTT_SERVER='mqtt://hairdresser.cloudmqtt.com'
+ MQTT_SERVER="mqtt://hairdresser.cloudmqtt.com"
  MQTT_USER ="qiiwyeiv"
- MQTT_PASSWORD ="X4hvcjgbyUi"
+ MQTT_PASSWORD ="X4hvcjgbyUit"
  MQTT_PORT=15572
 
