--- a/Client/package.json
+++ b/Client/package.json
@@ -13,7 +13,7 @@
     "@material-ui/styles": "^4.10.0",
     "apexcharts": "^3.22.3",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.3",
     "feather-icons-react": "^0.4.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
@@ -21,6 +21,7 @@
     "rc-datepicker": "^5.0.16",
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.7",
+    "react-bootstrap": "^1.4.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
