--- a/App/android/app/build.gradle
+++ b/App/android/app/build.gradle
@@ -129,7 +129,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.mobile"
+        applicationId "com.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -185,13 +185,8 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-
-    implementation project(':react-native-maps')
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-     // Reat native svg
-    implementation project(':react-native-svg')
 
-    //
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
@@ -212,8 +207,7 @@ dependencies {
     } else {
         implementation jscFlavor
     }
-    
-
+   
 }
 
 // Run this once to be able to run the application with BUCK
@@ -224,3 +218,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+//apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
