--- a/App/android/app/src/main/AndroidManifest.xml
+++ b/App/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.mobile">
+  package="com.app">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,10 +10,6 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDY3nAxG1mj8MgKMso97JGLHEsXcmxn_bs"
-            />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -26,7 +22,6 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
 </manifest>
