--- a/App/package.json
+++ b/App/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mobile",
+  "name": "App",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,50 +7,48 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint .",
-    "react-devtools": "react-devtools"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/checkbox": "^0.4.2",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/checkbox": "^0.5.6",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/drawer": "^5.9.0",
-    "@react-navigation/material-bottom-tabs": "^5.2.15",
-    "@react-navigation/native": "^5.7.2",
-    "@react-navigation/stack": "^5.8.0",
-    "axios": "^0.19.2",
-    "d3-scale": "^3.2.1",
-    "d3-shape": "^1.3.7",
+    "@react-navigation/drawer": "^5.11.4",
+    "@react-navigation/material-bottom-tabs": "^5.3.10",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "axios": "^0.21.0",
+    "d3-scale": "^3.2.3",
+    "d3-shape": "^2.0.0",
     "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
-    "react-native-chart-kit": "^6.5.0",
-    "react-native-elements": "^2.1.0",
-    "react-native-gesture-handler": "^1.7.0",
+    "react-native-chart-kit": "^6.8.1",
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-map-clustering": "^3.3.9",
-    "react-native-maps": "0.27.1",
-    "react-native-modalbox": "^2.0.0",
-    "react-native-paper": "^4.0.1",
+    "react-native-modalbox": "^2.0.2",
+    "react-native-paper": "^4.4.1",
     "react-native-progress-circle": "^2.1.0",
-    "react-native-reanimated": "^1.13.0",
-    "react-native-redash": "^14.2.3",
-    "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.9.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-redash": "^15.11.1",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.0",
     "react-native-svg": "^12.1.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^7.0.0",
-    "react-redux": "^7.2.1",
+    "react-native-vector-icons": "^7.1.0",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.0",
-    "@babel/runtime": "^7.11.0",
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.2.2",
-    "eslint": "^7.6.0",
-    "jest": "^26.2.2",
-    "metro-react-native-babel-preset": "^0.61.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.15.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
