--- a/App/package.json
+++ b/App/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/checkbox": "^0.5.6",
+    "@react-native-community/datetimepicker": "^3.0.8",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/material-bottom-tabs": "^5.3.10",
@@ -20,6 +21,7 @@
     "axios": "^0.21.0",
     "d3-scale": "^3.2.3",
     "d3-shape": "^2.0.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
@@ -28,6 +30,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-map-clustering": "^3.3.9",
+    "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-modalbox": "^2.0.2",
     "react-native-paper": "^4.4.1",
     "react-native-progress-circle": "^2.1.0",
@@ -38,6 +41,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-switch-selector": "^2.0.6",
     "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
