--- a/Client/package.json
+++ b/Client/package.json
@@ -14,10 +14,12 @@
     "apexcharts": "^3.22.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
     "feather-icons-react": "^0.4.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "material-table": "^1.61.0",
+    "mqtt": "^4.2.6",
     "rc-datepicker": "^5.0.16",
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.7",
