--- a/Server/.env
+++ b/Server/.env
@@ -25,8 +25,8 @@ JWT_KEY_SECRET_ACCOUT="HDJCJFDFDBFNDBCHBDCHBCHDBCHDCBHDBCHDBCHD"
  
 
  # Infomation CLOUT MQTT (MQTT BROKER)
- MQTT_SERVER="mqtt://broker.mqttdashboard.com"
- MQTT_USER ="tnt1513516"
- MQTT_PASSWORD ="tnt1513516"
- MQTT_PORT=8000
+ MQTT_SERVER="mqtt://hairdresser.cloudmqtt.com"
+ MQTT_USER = "qiiwyeiv"
+ MQTT_PASSWORD ="X4hvcjgbyUit"
+ MQTT_PORT=15572
 
