--- a/App/package.json
+++ b/App/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.0",
     "d3-scale": "^3.2.3",
     "d3-shape": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
