--- a/Client/package.json
+++ b/Client/package.json
@@ -11,13 +11,14 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "add": "^2.0.6",
+    "antd": "^4.9.4",
     "apexcharts": "^3.22.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
     "feather-icons-react": "^0.4.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "material-table": "^1.61.0",
     "mqtt": "^4.2.6",
     "rc-datepicker": "^5.0.16",
     "react": "^16.12.0",
@@ -32,10 +33,12 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-spinners": "^0.9.0",
     "react-switch": "^5.0.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
-    "universal-cookie": "^4.0.3"
+    "universal-cookie": "^4.0.3",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
