--- a/App/ios/Podfile
+++ b/App/ios/Podfile
@@ -10,6 +10,8 @@ target 'App' do
 
   pod 'react-native-date-picker', :path => '../node_modules/react-native-date-picker'
 
+  pod 'react-native-pure-jwt', :path => '../node_modules/react-native-pure-jwt'
+
   target 'AppTests' do
     inherit! :complete
     # Pods for testing
