--- a/App/package.json
+++ b/App/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.0",
     "d3-scale": "^3.2.3",
     "d3-shape": "^2.0.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
