--- a/Client/package.json
+++ b/Client/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-select": "^3.1.1",
     "react-spinners": "^0.9.0",
     "react-switch": "^5.0.1",
     "recompose": "^0.30.0",
