--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,6 @@
 # MongoDB
-MongoDB_URL = "mongodb://localhost:27017/ProjectIOT"
-
+MongoDB_URL_LOCAL = "mongodb://localhost:27017/ProjectIOT"
+MongoDB_URL = "mongodb+srv://TranTinh:tnt1513516HCMUT@cluster0.vp9ar.mongodb.net/ProjectIOT?retryWrites=true&w=majority"
 # Secret Auth API JWT
 
 SECRET_AUTH_API_JWT = "TranMyHiep2802@gmail.com"
