--- a/Server/.env
+++ b/Server/.env
@@ -30,3 +30,7 @@ JWT_KEY_SECRET_ACCOUT="HDJCJFDFDBFNDBCHBDCHBCHDBCHDCBHDBCHDBCHD"
  MQTT_PASSWORD ="X4hvcjgbyUit"
  MQTT_PORT=15572
 
+
+#Information Host Server
+
+HOST_SERVER ="http://localhost:3000/profile/confirmation"
