--- a/Server/.env
+++ b/Server/.env
@@ -33,4 +33,7 @@ JWT_KEY_SECRET_ACCOUT="HDJCJFDFDBFNDBCHBDCHBCHDBCHDCBHDBCHDBCHD"
 
 #Information Host Server
 
-HOST_SERVER ="http://localhost:3000/profile/confirmation"
+HOST_SERVER_WEB ="http://localhost:3000/profile/confirmation"
+
+
+#38224
