--- a/Client/package.json
+++ b/Client/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.24",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
@@ -38,8 +38,8 @@
     "react-switch": "^5.0.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
-    "universal-cookie": "^4.0.3",
-    "yarn": "^1.22.10"
+    "terser": "^5.5.1",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
