--- a/Desktop/Basic/packages.config
+++ b/Desktop/Basic/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FontAwesome.Sharp" version="5.15.3" targetFramework="net472" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net472" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="M2Mqtt" version="4.3.0.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.8.0" targetFramework="net472" />
